Added more quick views and helpers for offices

--- a/app/views/opportunities/show.html.erb
+++ b/app/views/opportunities/show.html.erb
@@ -33,11 +33,11 @@
   </tr>
   <tr>
     <td>Weighted margin</td>
-    <td><strong><%= @opportunity.total_margin %></strong></td>
+    <td><strong><%= @opportunity.weighted_margin %></strong></td>
   </tr>
   <tr>
     <td>Weighted revenue</td>
-    <td><strong><%= @opportunity.total_revenue %></strong></td>
+    <td><strong><%= @opportunity.weighted_revenue %></strong></td>
   </tr>
 </table>
 
