--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
 <body>
 <%= link_to "Sales", sales_path %>
 <%= link_to "Opportunities", opportunities_path %>
+<%= link_to "Users", users_path %>
+<%= link_to "Offices", offices_path %>
 
 <%= yield %>
 
