Quick views for all models and methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
 <%= link_to "Opportunities", opportunities_path %>
 <%= link_to "Users", users_path %>
 <%= link_to "Offices", offices_path %>
+<%= link_to "Budgets", budgets_path %>
+<%= link_to "Clients", clients_path %>
 
 <%= yield %>
 
