--- a/app/views/offices/show.html.erb
+++ b/app/views/offices/show.html.erb
@@ -2,5 +2,49 @@
 
 <h1><%= @office.name %></h1>
 
+<table>
+  <thead>
+    <tr>
+      <th>Seller</th>
+      <th>Budget</th>
+      <th>Current margin</th>
+      <th>Current revenue</th>
+      <th>Margin in pipeline</th>
+      <th>Revenue in pipeline</th>
+      <th>Estimated margin</th>
+      <th>Estimated revenue</th>
+      <th colspan="3">Actions</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @office.users.each do |user| %>
+      <tr>
+        <td><%= empl(user) %></td>
+        <td><%= user.budgets.sum(:amount) %></td>
+        <td><%= user.sales.sum(:margin) %></td>
+        <td><%= user.sales.sum(:revenue) %></td>
+        <td><%= user.opportunities.sum(:total_margin) %></td>
+        <td><%= user.opportunities.sum(:total_revenue) %></td>
+        <td><%= user.opportunities.sum(:total_margin) + user.sales.sum(:margin) %></td>
+        <td><%= user.opportunities.sum(:total_revenue) + user.sales.sum(:revenue) %></td>
+        <td><%= link_to 'Show', user %></td>
+        <td><%= link_to 'Edit', edit_user_path(user) %></td>
+        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+    <tr>
+      <td><strong>Total</strong></td>
+      <td><strong><%= office_budget(@office) %></strong></td>
+      <td><strong><%= office_margin(@office) %></strong></td>
+      <td><strong><%= office_revenue(@office) %></strong></td>
+      <td><strong><%= office_pipeline_margin(@office) %></strong></td>
+      <td><strong><%= office_pipeline_revenue(@office) %></strong></td>
+      <td><strong><%= office_pipeline_margin(@office) + office_margin(@office) %></strong></td>
+      <td><strong><%= office_pipeline_revenue(@office) + office_revenue(@office) %></strong></td>
+    </tr>
+  </tbody>
+</table>
+
 <%= link_to 'Edit', edit_office_path(@office) %> |
 <%= link_to 'Back', offices_path %>
