--- a/app/views/opportunities/_form.html.erb
+++ b/app/views/opportunities/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="form-inputs">
-    <%= f.input :client_id %>
+    <%= f.input :client_id, collection: Client.all, label_method: :name %>
   </div>
   <br />
   <div class="form-inputs">
-    <%= f.input :user_id %>
+    <%= f.input :user_id, collection: User.all, label_method: :full_name %>
   </div>
   <br />
   <div class="form-inputs">
