Added a little more fancy way to add budgets

--- a/app/views/budgets/_form.html.erb
+++ b/app/views/budgets/_form.html.erb
@@ -16,8 +16,18 @@
   </div>
 
   <div class="form-inputs">
-    <%= f.input :month, collection: ["January", "February", "March", "April", "May", "June", "July", 
-                                     "August", "September", "October", "November", "December"] %>
+    <%= f.input :month, collection: ["January", 
+                                     "February", 
+                                     "March", 
+                                     "April", 
+                                     "May", 
+                                     "June", 
+                                     "July", 
+                                     "August", 
+                                     "September", 
+                                     "October", 
+                                     "November", 
+                                     "December"] %>
   </div>
 
   <div class="form-inputs">
