--- a/app/views/budgets/index.html.erb
+++ b/app/views/budgets/index.html.erb
@@ -16,42 +16,21 @@
       ], (params[:search] or Time.now.strftime("%B"))) %>
     <%= submit_tag "Search" %>
   <% end %>
-<table>
-  <thead>
-    <tr>
-      <th>Seller</th>
-      <th>Month</th>
-      <th>Amount</th>
-      <th colspan="3">Actions</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @search_budgets.each do |budget| %>
-      <tr>
-        <td><%= empl(budget.user) %></td>
-        <td><%= budget.month %></td>
-        <td><%= budget.amount %></td>
-        <td><%= link_to 'Show', budget %></td>
-        <td><%= link_to 'Edit', edit_budget_path(budget) %></td>
-        <td><%= link_to 'Destroy', budget, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<br>
 
 <table>
   <thead>
     <tr>
       <th>Seller</th>
+      <th>Office</th>
       <th>Budget</th>
+      <th>Action</th>
     </tr>
   </thead>
   <tbody>
     <% User.all.each do |user| %>
     <tr>
       <td><%= empl(user) %></td>
+      <td><%= user.office.name %></td>
       <% if seller_budget(user, params[:search]) == 0 %>
       <td>
         <%= simple_form_for(@budget) do |f| %>
@@ -73,17 +52,18 @@
               <%= f.hidden_field :month, :value => Time.now.strftime("%B") %>
             <% end %>
             <%= f.input_field :amount %>
-            <%= f.submit %>
+          </td>
+          <td>
+            <%= f.submit "Add" %>
           </div>
         <% end %>
       </td>
       <% else %>
       <td><%= seller_budget(user, params[:search]) %></td>
+      <td><%= link_to "Edit", edit_budget_path(seller_budget_id(user, params[:search])) %></td>
       <% end %>
     </tr>
     <% end %>
   </tbody>
 </table>
 <br />
-
-<%= link_to 'New Budget', new_budget_path %>
