--- a/app/views/budgets/edit.html.erb
+++ b/app/views/budgets/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing budget</h1>
+<h1><%= @budget.user.full_name %> - <%= @budget.month %></h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @budget %> |
-<%= link_to 'Back', budgets_path %>
+<%= link_to 'Back', :back %>
