--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,14 +5,8 @@
     <tr>
       <th>Name</th>
       <th>office</th>
-      <th>Budget</th>
-      <th>Current revenue</th>
-      <th>Current margin</th>
-      <th>Revenue in pipline</th>
-      <th>Margin in pipeline</th>
-      <th>Estimated revenue</th>
-      <th>Estimated margin</th>
-      <th colspan="3"></th>
+      <th>Email</th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
@@ -21,13 +15,7 @@
       <tr>
         <td><%= user.full_name %></td>
         <td><%= user.office.name %></td>
-        <td><%= user.budgets.where(:month == Time.now.strftime("%B")).sum(:amount) %></td>
-        <td><%= user.sales.sum(:revenue) %></td>
-        <td><%= user.sales.sum(:margin) %></td>
-        <td><%= user.opportunities.sum(:weighted_revenue) %></td>
-        <td><%= user.opportunities.sum(:weighted_margin) %></td>
-        <td><%= user.opportunities.sum(:weighted_revenue) + user.sales.sum(:revenue) %></td>
-        <td><%= user.opportunities.sum(:weighted_margin) + user.sales.sum(:margin) %></td>
+        <td><%= user.email %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
