Added file upload to sales

--- a/app/views/sales/_form.html.erb
+++ b/app/views/sales/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@sale) do |f| %>
+<%= simple_form_for(@sale, :html => { :multipart => true }) do |f| %>
   <% if @sale.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@sale.errors.count, "error") %> prohibited this sale from being saved:</h2>
@@ -41,6 +41,10 @@
   <br />
   <div class="form-inputs">
     <%= f.input :description %>
+  </div>
+  <br />
+  <div class="form-inputs">
+    <%= f.file_field :file %>
   </div>
   <br />
   <div class="actions">
