Added simple authentication

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
 <%= link_to "Offices", offices_path %>
 <%= link_to "Budgets", budgets_path %>
 <%= link_to "Clients", clients_path %>
+<br />
+<br />
+<%= flash[:error] %>
+<%= flash[:notice] %>
+<%= flash[:success] %>
 
 <%= yield %>
 
