--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -31,6 +31,14 @@
   </div>
   <br />
   <div class="form-inputs">
+    <%= f.input :password %>
+  </div>
+  <br />
+  <div class="form-inputs">
+    <%= f.input :password_confirmation %>
+  </div>
+  <br />
+  <div class="form-inputs">
     <%= f.file_field :avatar %>
   </div>
   <br />
