--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
 <%= link_to "Offices", offices_path %>
 <%= link_to "Budgets", budgets_path %>
 <%= link_to "Clients", clients_path %>
+<% if logged_in? %>
+  <%= link_to "Log Out", logout_path, method: :delete %>
+<% else %>
+  <%= link_to "Log In", new_user_session_path %>
+<% end %>
 <br />
 <br />
 <%= flash[:error] %>
