Added bootstrap, and fixed some views

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,48 @@
  *= require_self
  */
 
+@import "bootstrap";
+@import "bootstrap/theme";
+
+ body { 
+  padding-top: 70px; 
+  margin-bottom: 130px;
+}
+
+.logo {
+  height: 130%;
+  margin-top: -9px;
+}
 
 html {
-  font-family: "arial";
+  position: relative;
+  min-height: 100%;
+}
+
+span.active {
+  background-color: #FFF;
+  color: #428bca;
+}
+
+.navbar-logo {
+  margin-top: -10px;
+  height: 40px;
+  width: 40px;
+}
+
+.border-none {
+  border: none;
+}
+
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+  padding-top: 20px;
+  color: #999;
 }
