--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,24 +7,81 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= link_to "Sales", sales_path %>
-<%= link_to "Opportunities", opportunities_path %>
-<%= link_to "Users", users_path %>
-<%= link_to "Offices", offices_path %>
-<%= link_to "Budgets", budgets_path %>
-<%= link_to "Clients", clients_path %>
-<% if logged_in? %>
-  <%= link_to "Log Out", logout_path, method: :delete %>
-<% else %>
-  <%= link_to "Log In", new_user_session_path %>
-<% end %>
-<br />
-<br />
-<%= flash[:error] %>
-<%= flash[:notice] %>
-<%= flash[:success] %>
+  <div class="container">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/"><img src="http://solidmediagroup.com/assets/img/logo.svg" class="navbar-logo"></a>
+      </div>
 
-<%= yield %>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <% if logged_in? %>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class=""><%= link_to "Pipeline", opportunities_path %></li>
+          <li class=""><%= link_to "Sales", sales_path %></li>
+          <li class=""><%= link_to "Offices", offices_path %></li>
+        </ul>
+        <form class="navbar-form navbar-right" role="search">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search">
+            <span class="input-group-btn">
+              <button class="btn btn-default" type="button">Go!</button>
+            </span>
+          </div><!-- /input-group -->
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.full_name %> <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">My numbers</a></li>
+              <li><a href="#">Profile</a></li>
+              <li class="divider"></li>
+              <li><%= link_to "Log Out", logout_path, method: :delete %></li>
+            </ul>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+      <% else %>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
+
+          <%= form_tag user_sessions_path, :class => "navbar-form navbar-right" do %>
+            <div class="form-group">
+              <%= text_field_tag :email, params[:email], :class => "form-control input-sm", :placeholder => "Email" %>
+            </div>
+            <div class="form-group">
+              <%= password_field_tag :password, nil, :placeholder => "Password", :class => "form-control input-sm" %>
+            </div>
+            <%= submit_tag "Sign in", :class => "btn btn-primary btn-sm" %>
+          <% end %>
+        </div><!-- /.navbar-collapse -->
+      <% end %>
+    </div><!-- /.container-fluid -->
+  </nav>
+
+    <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        <%= value %>
+        </div>
+    <% end %>
+
+
+    <%= yield %>
+
+  </div>
+  <div class="footer">
+    <div class="container">
+      <p>&copy; Solid Media Group 2014</p>
+    </div>
+  </div>
 </body>
 </html>
