--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,10 +1,27 @@
-<h1>Change your password</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="page-header">
+      <h2>Reset password</h2>
+    </div>
 
-<%= simple_form_for @user, url: password_reset_path(@user.password_reset_token), html: { method: :patch } do |f| %>
+      <%= simple_form_for @user, url: password_reset_path(@user.password_reset_token), html: { method: :patch, :class => "form-horizontal" } do |f| %>
 
-  <%= f.input :password %>
-  <br />
-  <%= f.input :password_confirmation %>
-  <br />
-  <%= submit_tag "Change password" %>
-<% end %>
+        <div class="form-group">
+          <%= f.label :password, "Password", :class => "col-md-3 control-label" %>
+          <div class="col-md-9">
+            <%= f.input_field :password, placeholder: "Password", :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :password_confirmation, "Password (again)", :class => "col-md-3 control-label" %>
+          <div class="col-md-9">
+            <%= f.input_field :password_confirmation, placeholder: "Password confirmation", :class => "form-control" %>
+          </div>
+        </div>
+        <div class="col-md-offset-3 col-md-9">
+          <%= submit_tag "Change password", :class => "btn btn-primary" %>
+        </div>
+      <% end %>
+  </div>
+</div>
