--- a/app/views/sales/_form.html.erb
+++ b/app/views/sales/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@sale, :html => { :multipart => true }) do |f| %>
+<%= simple_form_for(@sale, :html => { :multipart => true, :class => "form-horizontal" }) do |f| %>
   <% if @sale.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@sale.errors.count, "error") %> prohibited this sale from being saved:</h2>
@@ -11,43 +11,69 @@
     </div>
   <% end %>
 
-  <div class="form-inputs">
-    <%= f.input :client_id, collection: Client.all, label_method: :name %>
+  <div class="form-group">
+    <%= f.label :client_id, "Client", :class => "col-md-3 control-label" %>
+    <div class="col-md-9">
+      <%= f.input_field :client_id, collection: Client.all, label_method: :name, :class => "form-control" %>
+    </div>
   </div>
-  <br />
-  <div class="form-inputs">
-    <%= f.input :user_id, collection: User.all, label_method: :full_name %>
+
+  <div class="form-group">
+    <%= f.label :user_id, "User", :class => "col-md-3 control-label" %>
+    <div class="col-md-9">
+      <%= f.input_field :user_id, collection: User.all, label_method: :full_name, :class => "form-control" %>
+    </div>
   </div>
-  <br />
-  <div class="form-inputs">
-    <%= f.input :software %>
+
+  <div class="form-group">
+    <%= f.label :software, :class => "col-md-3 control-label" %>
+    <div class="col-md-9">
+      <%= f.input_field :software, :class => "form-control" %>
+    </div>
   </div>
-  <br />
-  <div class="form-inputs">
-    <%= f.input :semi %>
+
+  <div class="form-group">
+    <%= f.label :semi, :class => "col-md-3 control-label" %>
+    <div class="col-md-9">
+      <%= f.input_field :semi, :class => "form-control" %>
+    </div>
   </div>
-  <br />
-  <div class="form-inputs">
-    <%= f.input :production %>
+
+  <div class="form-group">
+    <%= f.label :production, :class => "col-md-3 control-label" %>
+    <div class="col-md-9">
+      <%= f.input_field :production, :class => "form-control" %>
+    </div>
   </div>
-  <br />
-  <div class="form-inputs">
-    <%= f.input :ads %>
+
+  <div class="form-group">
+    <%= f.label :ads, :class => "col-md-3 control-label" %>
+    <div class="col-md-9">
+      <%= f.input_field :ads, :class => "form-control" %>
+    </div>
   </div>
-  <br />
-  <div class="form-inputs">
-    <%= f.input :other %>
+
+  <div class="form-group">
+    <%= f.label :other, :class => "col-md-3 control-label" %>
+    <div class="col-md-9">
+      <%= f.input_field :other, :class => "form-control" %>
+    </div>
   </div>
-  <br />
-  <div class="form-inputs">
-    <%= f.input :description %>
+
+  <div class="form-group">
+    <%= f.label :description, :class => "col-md-3 control-label" %>
+    <div class="col-md-9">
+      <%= f.input_field :description, :class => "form-control" %>
+    </div>
   </div>
-  <br />
-  <div class="form-inputs">
-    <%= f.file_field :file %>
+
+  <div class="form-group">
+    <%= f.label :file, "Attachment", :class => "col-md-3 control-label" %>
+    <div class="col-md-9">
+      <%= f.file_field :file, :class => "form-control" %>
+    </div>
   </div>
-  <br />
-  <div class="actions">
-    <%= f.submit %>
+  <div class="col-sm-offset-3 col-md-9">
+    <%= f.submit "Submit", :class => "btn btn-primary" %>
   </div>
 <% end %>
