--- a/app/views/sales/new.html.erb
+++ b/app/views/sales/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New sale</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', sales_path %>
+<div class="row">
+  <div class="col-md-6">
+    <div class="page-header">
+      <h2>New sale</h2>
+    </div>
+    <%= render 'form' %>
+  </div>
+</div>
