--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,10 +78,14 @@
   </nav>
 
     <% flash.each do |key, value| %>
-      <div class="alert alert-<%= key %>">
+      <% if key == "notice" %>
+        <div class="alert alert-success">
+      <% else %>
+        <div class="alert alert-<%= key %>">
+      <% end %>
         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
         <%= value %>
-        </div>
+      </div>
     <% end %>
 
 
