--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -1,16 +1,23 @@
-<h1>Listing offices</h1>
+<div class="page-header">
+  <div class="row">
+    <div class="col-md-12">
+      <h2><%= t('offices.title') %></h2>
+    </div>
+  </div>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Office</th>
-      <th>Budget</th>
-      <th>Current margin</th>
-      <th>Current revenue</th>
-      <th>Margin in pipeline</th>
-      <th>Revenue in pipeline</th>
-      <th>Estimated margin</th>
-      <th>Estimated revenue</th>
+<div class="table-responsive">
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+      <th><%= t('offices.title') %></th>
+      <th><%= t('offices.budget') %></th>
+      <th><%= t('offices.current_margin') %></th>
+      <th><%= t('offices.current_revenue') %></th>
+      <th><%= t('offices.pipeline_margin') %></th>
+      <th><%= t('offices.pipeline_revenue') %></th>
+      <th><%= t('offices.estimated_margin') %></th>
+      <th><%= t('offices.estimated_revenue') %></th>
       <th colspan="3">Actions</th>
     </tr>
   </thead>
@@ -19,13 +26,13 @@
     <% @offices.each do |office| %>
       <tr>
         <td><%= link_to office.name, office_path(office) %></td>
-        <td><%= office_current_budget(office) %></td>
-        <td><%= office_margin(office) %></td>
-        <td><%= office_revenue(office) %></td>
-        <td><%= office_pipeline_margin(office) %></td>
-        <td><%= office_pipeline_revenue(office) %></td>
-        <td><%= office_pipeline_margin(office) + office_margin(office) %></td>
-        <td><%= office_pipeline_revenue(office) + office_revenue(office) %></td>
+        <td><%= number_to_currency(office_current_budget(office), unit: "", precision: 0, delimiter: " ") %></td>
+        <td><%= number_to_currency(office_margin(office), unit: "", precision: 0, delimiter: " ") %></td>
+        <td><%= number_to_currency(office_revenue(office), unit: "", precision: 0, delimiter: " ") %></td>
+        <td><%= number_to_currency(office_pipeline_margin(office), unit: "", precision: 0, delimiter: " ") %></td>
+        <td><%= number_to_currency(office_pipeline_revenue(office), unit: "", precision: 0, delimiter: " ") %></td>
+        <td><%= number_to_currency(office_pipeline_margin(office) + office_margin(office), unit: "", precision: 0, delimiter: " ") %></td>
+        <td><%= number_to_currency(office_pipeline_revenue(office) + office_revenue(office), unit: "", precision: 0, delimiter: " ") %></td>
         <td><%= link_to 'Show', office %></td>
         <td><%= link_to 'Edit', edit_office_path(office) %></td>
         <td><%= link_to 'Destroy', office, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -33,7 +40,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Office', new_office_path %>
