--- a/app/views/opportunities/index.html.erb
+++ b/app/views/opportunities/index.html.erb
@@ -1,51 +1,40 @@
-<h1>Listing opportunities</h1>
+<div class="page-header">
+  <div class="row">
+    <div class="col-md-6">
+      <h2><%= t('opportunities.title') %></h2>
+    </div>
+    <div class="col-md-6">
+      <h2><%= link_to t('opportunities.new_opportunity'), new_opportunity_path, :class => "btn btn-primary pull-right" %><h2>
+    </div>
+  </div>
+</div>
 
 
-<table>
-  <thead>
-    <tr>
-      <th>Client</th>
-      <th>Seller</th>
-      <th>Software</th>
-      <th>Semi</th>
-      <th>Production</th>
-      <th>Ads</th>
-      <th>Other</th>
-      <th>Total margin</th>
-      <th>Total revenue</th>
-      <th>Weighted margin</th>
-      <th>Weighted revenue</th>
-      <th>Closing date</th>
-      <th>Probability</th>
-      <th colspan="3">Actions</th>
+<div class="table-responsive">
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+      <th><%= t('opportunities.client') %></th>
+      <th><%= t('opportunities.closing_date') %></th>
+      <th><%= t('opportunities.total_margin') %></th>
+      <th><%= t('opportunities.total_revenue') %></th>
+      <th><%= t('opportunities.weighted_margin') %></th>
+      <th><%= t('opportunities.weighted_revenue') %></th>
+      <th><%= t('opportunities.probability') %></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @opportunities.each do |opportunity| %>
+    <% @user_opportunities.each do |opportunity| %>
       <tr>
-        <td><%= opportunity.client.name %></td>
-        <td><%= empl(opportunity.user) %></td>
-        <td><%= opportunity.software %></td>
-        <td><%= opportunity.semi %></td>
-        <td><%= opportunity.production %></td>
-        <td><%= opportunity.ads %></td>
-        <td><%= opportunity.other %></td>
-        <td><strong><%= opportunity.total_margin %></strong></td>
-        <td><strong><%= opportunity.total_revenue %></strong></td>
-        <td><strong><%= opportunity.weighted_margin %></strong></td>
-        <td><strong><%= opportunity.weighted_revenue %></strong></td>
-        <td><%= opportunity.closing_date %></td>
+        <td><%= link_to opportunity.client.name, client_path(opportunity.client) %></td>
+        <td><%= link_to opportunity.closing_date.strftime("%b %d, %Y"), opportunity_path(opportunity) %></td>
+        <td><%= number_to_currency(opportunity.total_margin, unit: "", precision: 0, delimiter: " ") %></td>
+        <td><%= number_to_currency(opportunity.total_revenue, unit: "", precision: 0, delimiter: " ") %></td>
+        <td><strong><%= number_to_currency(opportunity.weighted_margin, unit: "", precision: 0, delimiter: " ") %></strong></td>
+        <td><strong><%= number_to_currency(opportunity.weighted_revenue, unit: "", precision: 0, delimiter: " ") %></strong></td>
         <td><%= opportunity.probability %>%</td>
-        <td><%= link_to 'Show', opportunity %></td>
-        <td><%= link_to 'Edit', edit_opportunity_path(opportunity) %></td>
-        <td><%= link_to 'Destroy', opportunity, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-
-<br>
-
-<%= link_to 'New Opportunity', new_opportunity_path %>
