--- a/app/views/sales/_form.html.erb
+++ b/app/views/sales/_form.html.erb
@@ -1,3 +1,6 @@
+<script>
+    $(document).ready(function() { $(".select-search").select2(); });
+</script>
 <%= simple_form_for(@sale, :html => { :multipart => true, :class => "form-horizontal" }) do |f| %>
   <% if @sale.errors.any? %>
     <div id="error_explanation">
@@ -14,14 +17,14 @@
   <div class="form-group">
     <%= f.label :client_id, "Client", :class => "col-md-3 control-label" %>
     <div class="col-md-9">
-      <%= f.input_field :client_id, collection: Client.all, label_method: :name, :class => "form-control" %>
+      <%= f.input_field :client_id, collection: Client.all, label_method: :name, :class => "form-control select-search" %>
     </div>
   </div>
 
   <div class="form-group">
     <%= f.label :user_id, "User", :class => "col-md-3 control-label" %>
     <div class="col-md-9">
-      <%= f.input_field :user_id, collection: User.all, label_method: :full_name, :class => "form-control" %>
+      <%= f.input_field :user_id, collection: User.all, label_method: :full_name, :class => "form-control select-search" %>
     </div>
   </div>
 
