--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -1,42 +1,179 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="page-header">
+      <h2><%= link_to @sale.client.name, client_path(@sale.client) %> <small class="pull-right"><%= @sale.created_at.strftime("%b %d, %Y") %> ago</small></h2>
+    </div>
+    <p class="lead">This order was sold by <%= empl(@sale.user) %> <%= time_ago_in_words(@sale.created_at) %> ago.</p>
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th>Product</th>
+          <th>Revenue</th>
+          <th>Coverage rate</th>
+          <th>Margin</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% if @sale.software %>
+          <tr>
+            <td>Software</td>
+            <td><%= number_to_currency(@sale.software, unit: "", precision: 0, delimiter: " ") %></td>
+            <td><%= @sale.software_rate %>%</td>
+            <td><%= number_to_currency(@sale.software_margin, unit: "", precision: 0, delimiter: " ") %></td>
+          </tr>
+        <% end %>
+        <% if @sale.semi %>
+          <tr>
+            <td>Semi</td>
+            <td><%= number_to_currency(@sale.semi, unit: "", precision: 0, delimiter: " ") %></td>
+            <td><%= @sale.semi_rate %>%</td>
+            <td><%= number_to_currency(@sale.semi_margin, unit: "", precision: 0, delimiter: " ") %></td>
+          </tr>
+        <% end %>
+        <% if @sale.production %>
+          <tr>
+            <td>Production</td>
+            <td><%= number_to_currency(@sale.production, unit: "", precision: 0, delimiter: " ") %></td>
+            <td><%= @sale.production_rate %>%</td>
+            <td><%= number_to_currency(@sale.production_margin, unit: "", precision: 0, delimiter: " ") %></td>
+          </tr>
+        <% end %>
+        <% if @sale.ads %>
+          <tr>
+            <td>Ads</td>
+            <td><%= number_to_currency(@sale.ads, unit: "", precision: 0, delimiter: " ") %></td>
+            <td><%= @sale.ads_rate %>%</td>
+            <td><%= number_to_currency(@sale.ads_margin, unit: "", precision: 0, delimiter: " ") %></td>
+          </tr>
+        <% end %>
+        <% if @sale.other %>
+          <tr>
+            <td>Other</td>
+            <td><%= number_to_currency(@sale.other, unit: "", precision: 0, delimiter: " ") %></td>
+            <td><%= @sale.other_rate %>%</td>
+            <td><%= number_to_currency(@sale.other_margin, unit: "", precision: 0, delimiter: " ") %></td>
+          </tr>
+        <% end %>
+        <% if @sale.margin %>
+          <tr>
+            <td><strong>Total</strong></td>
+            <td><strong><%= number_to_currency(@sale.revenue, unit: "", precision: 0, delimiter: " ") %></strong></td>
+            <td><strong><%= @sale.margin / @sale.revenue * 100 %>%</strong></td>
+            <td><strong><%= number_to_currency(@sale.margin, unit: "", precision: 0, delimiter: " ") %></strong></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <div class="col-md-6">
+      <% if @sale.user == current_user %>
+        <div class="btn-group">
+          <button class="btn btn-warning" data-toggle="modal" data-target="#newSale">
+            Edit
+          </button>
+          <%= link_to 'Delete', @sale, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger" %>
+        </div>
+      <% end %>
+    </div>
+    <div class="col-md-6">
+      <% if @sale.file? %>
+        <%= link_to "Show attachment", @sale.file.url, :class => "btn btn-default pull-right", :target => "_blank" %>
+      <% end %>
+    </div>
+  </div>
+</div>
 
-<h1><%= @sale.client.name %></h1>
 
-<table>
-  <tr>
-    <td>Software</td>
-    <td><%= @sale.software %></td>
-  </tr>
-  <tr>
-    <td>Semi</td>
-    <td><%= @sale.semi %></td>
-  </tr>
-  <tr>
-    <td>Production</td>
-    <td><%= @sale.production %></td>
-  </tr>
-  <tr>
-    <td>Ads</td>
-    <td><%= @sale.ads %></td>
-  </tr>
-  <tr>
-    <td>Other</td>
-    <td><%= @sale.other %></td>
-  </tr>
-  <tr>
-    <td>Margin</td>
-    <td><strong><%= @sale.margin %></strong></td>
-  </tr>
-  <tr>
-    <td>Revenue</td>
-    <td><strong><%= @sale.revenue %></strong></td>
-  </tr>
-</table>
-<br />
-<% if @sale.file? %>
-  <%= link_to "Show attachment", @sale.file.url %>
-<% end %>
-<br />
-<br />
-<%= link_to 'Edit', edit_sale_path(@sale) %> |
-<%= link_to 'Back', sales_path %>
+<div class="modal fade" id="newSale" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Edit sale</h4>
+      </div>
+      <div class="modal-body">
+        <script>
+            $(document).ready(function() { $(".select-search").select2(); });
+        </script>
+        <%= simple_form_for(@sale, :html => { :multipart => true, :class => "form-horizontal" }) do |f| %>
+          <% if @sale.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(@sale.errors.count, "error") %> prohibited this sale from being saved:</h2>
+
+              <ul>
+              <% @sale.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+              </ul>
+            </div>
+          <% end %>
+
+          <div class="form-group">
+            <%= f.label :client_id, "Client", :class => "col-md-3 control-label" %>
+            <div class="col-md-9">
+              <%= f.input_field :client_id, collection: Client.all, label_method: :name, :class => "form-control select-search" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :user_id, "User", :class => "col-md-3 control-label" %>
+            <div class="col-md-9">
+              <%= f.input_field :user_id, collection: User.all, label_method: :full_name, :class => "form-control select-search" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :software, :class => "col-md-3 control-label" %>
+            <div class="col-md-9">
+              <%= f.input_field :software, :class => "form-control" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :semi, :class => "col-md-3 control-label" %>
+            <div class="col-md-9">
+              <%= f.input_field :semi, :class => "form-control" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :production, :class => "col-md-3 control-label" %>
+            <div class="col-md-9">
+              <%= f.input_field :production, :class => "form-control" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :ads, :class => "col-md-3 control-label" %>
+            <div class="col-md-9">
+              <%= f.input_field :ads, :class => "form-control" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :other, :class => "col-md-3 control-label" %>
+            <div class="col-md-9">
+              <%= f.input_field :other, :class => "form-control" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :description, :class => "col-md-3 control-label" %>
+            <div class="col-md-9">
+              <%= f.input_field :description, :class => "form-control" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :file, "Attachment", :class => "col-md-3 control-label" %>
+            <div class="col-md-9">
+              <%= f.file_field :file, :class => "form-control" %>
+            </div>
+          </div>
+       <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <%= f.submit "Submit", :class => "btn btn-primary" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
